# talentcv

./: .env.example  .gitignore  .replit  README.md  package-lock.json  pyproject.toml  replit.md
attached_assets/: Pasted-3-37-45-AM-express-GET-api-sections-500-in-56ms-error-Backend-service-unavailable-messag-1757464698337_1757464698339.txt  Pasted-Azure-OpenAI-Use-environment-variables-and-the-official-SDK-Support-both-ChatCompletions-and-Respo-1757460588553_1757460588553.txt
backend/: .env.example  app.py  loader.py  requirements.txt  retriever.py
backend/crew/: __init__.py  agents.py  tasks.py  tools.py
backend/data/: cv.md
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ChatPanel.tsx  Header.tsx  SectionCards.tsx  ThemeProvider.tsx
client/src/lib/: api.ts
client/src/pages/: home.tsx
client/src/types/: index.ts
server/: index.ts  routes.ts
