[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai==0.51.1",
    "flask-cors==4.0.0",
    "flask==3.0.3",
    "markdown==3.7",
    "scikit-learn==1.5.2",
    "python-dotenv==1.0.1",
    "crewai-tools==0.8.0",
    "openai==1.54.3",
    "beautifulsoup4==4.12.3",
    "numpy==1.26.4",
    "tiktoken==0.7.0",
    "langchain-openai>=0.1.25",
]
